objects/CameleonCPQ__QxQuote__c.object
<CustomObject>
    <description>PROS Smart CPQx Quote</description>
    <fields>
        <fullName>AOPSID__c</fullName>
        <formula>CameleonCPQ__AccountId__r.AOPS_Cust_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOPSID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPS_Account_is_valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AOPS Account # is valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Hosted_Flag__c</fullName>
        <formula>CameleonCPQ__AccountId__r.Hosted_Catalog_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Hosted Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Level__c</fullName>
        <formula>/*IF( OR(CameleonCPQ__AccountId__r.RecordType.DeveloperName = &quot;Customer&quot; ,CameleonCPQ__AccountId__r.RecordType.DeveloperName = &quot;Prospect&quot; ) , &quot;C&quot;,  IF( CameleonCPQ__AccountId__r.RecordType.DeveloperName = &quot;Parent&quot; , &quot;P&quot;, IF( CameleonCPQ__AccountId__r.RecordType.DeveloperName = &quot;Grandparent&quot; , &quot;GP&quot;, IF( CameleonCPQ__AccountId__r.RecordType.DeveloperName = &quot;Great_Grandparent&quot; , &quot;GGP&quot;, &quot;C&quot;)) ) )*/
/*CameleonCPQ__AccountId__r.Hierarchy__c*/

IF(ISBLANK(CameleonCPQ__AccountId__r.Hierarchy__c), &apos;C&apos;, CameleonCPQ__AccountId__r.Hierarchy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>CameleonCPQ__AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Prospect/Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Mail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner Mail</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quotes_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>CameleonCPQ__AccountId__r.Account_Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addition_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addition Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Count__c</fullName>
        <label>Agreement Count</label>
        <summaryForeignKey>PROS_Agreement__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Agreement_Term__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Agreement Term Length (in Years)</description>
        <inlineHelpText>Agreement Term Length (in Years)</inlineHelpText>
        <label>Modeled Agreement Term Length</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amendment_Addendum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Legal Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_DOA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment DOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analyst_Notes__c</fullName>
        <label>Analyst Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Sales_Gross__c</fullName>
        <label>Annual Contract Sales (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Sales__c</fullName>
        <formula>Sell_Amount__c* Agreement_Term__c / Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Contract Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Date_Effective__c</fullName>
        <formula>IF(ISBLANK( Application_Date__c ), TODAY() ,Application_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Rejection_Comments__c</fullName>
        <inlineHelpText>Approval Rejection Comments</inlineHelpText>
        <label>DOA Approval/Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_By_Rejected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approved By/Rejected By</inlineHelpText>
        <label>DOA Approved By/Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_QuotesFZQ4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B2B_Integration_Approval_Received__c</fullName>
        <formula>if (text(B2B_Integration_Approval_Status__c )==&quot;Approved&quot;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B2B Integration Approval Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Integration_Approval_Status__c</fullName>
        <label>B2B Integration Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_Integration_Approve_Reject_Comments__c</fullName>
        <label>B2B Integration Approve/Reject Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B2B_Integration_Approved_Rejected_By__c</fullName>
        <label>B2B Integration Approved/Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Integration_Approved_Rejected_Date__c</fullName>
        <label>B2B Integration Approved/Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>B2B_Integration_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Integration Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSD_Pricing_Approval_Is_Received__c</fullName>
        <formula>if(text(BSD_Pricing_Approval_Status__c)==&apos;Approved&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSD Pricing Approval Is Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSD_Pricing_Approval_Rejection_Comments__c</fullName>
        <label>BSD Pricing Approval/Rejection Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSD_Pricing_Approval_Rejection_date__c</fullName>
        <label>BSD Pricing Approval/Rejection date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSD_Pricing_Approval_Status__c</fullName>
        <label>BSD Pricing Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSD_Pricing_Approval_is_Required__c</fullName>
        <formula>if(
and ( 
NOT(ISBLANK(Customer_Id__c)) ,
CameleonCPQ__AccountId__r.Hosted_Catalog_Flag__c ==TRUE,
Go_Live_Date__c &lt;=today()   
)
,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSD Pricing Approval is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSD_Pricing_Approved_Rejected_By__c</fullName>
        <label>BSD Pricing Approved/Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSD_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BSD Pricing Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBFS_Core_IGM_Perc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CBFS Core IGM</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CBFS_Core_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CBFS Core Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBFS_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CBFS Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_QuotesbQJ7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBFS_Price_Cap__c</fullName>
        <label>CBFS Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CBFS_Price_Lock_days__c</fullName>
        <label>CBFS Update Frequency(days)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBFS_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CBFS VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quotes6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDM Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDM Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quotesi0GC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_QuotesZRZM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quoteshvb6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPD_Core_IGM_Perc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CPD Core IGM</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPD_Core_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CPD Core Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPD Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quotes5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPD_Price_Cap__c</fullName>
        <label>CPD Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPD_Price_Lock_days__c</fullName>
        <label>CPD Update Frequency(days)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPM_CM_Guardrail_Non_GPO_Perc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CM Guardrail (Non-GPO)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPM_Cash_Rebate__c</fullName>
        <formula>Cash_Rebate__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Cashflow_Test__c</fullName>
        <formula>IF(Up_Front_Cash_Rebate__c
=0
,&quot;NO UPFRONT MONEY&quot;,IF(CPM_Net_Present_Value_Total_Contract__c&lt;0
,&quot;FAILS CASHFLOW&quot;,&quot;PASS CASHFLOW&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cashflow Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_Contribution_Margin_Perc__c</fullName>
        <formula>IF(CPM_Total_Contract_Sales_Net__c &gt;0, CPM_Contribution_Margin__c 
/CPM_Total_Contract_Sales_Net__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPM_Contribution_Margin__c</fullName>
        <formula>Contribution_Margin__c*Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Cost_of_Credit_Payment_terms__c</fullName>
        <formula>Cost_of_Credit_Payment_terms__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Credit $ (Payment terms)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Desktop_Delivery__c</fullName>
        <formula>Desktop_Delivery__c *Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desktop Delivery $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Deviation_Funds__c</fullName>
        <formula>(Deviation_Funds__c+O_A__c)* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deviation Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Distribution__c</fullName>
        <formula>Agreement_Term__c * Distribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Freight__c</fullName>
        <formula>Freight__c*Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Inherited_Rebate__c</fullName>
        <formula>Inherited_Rebates__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inherited Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Margin_Erosion_Price_Locks__c</fullName>
        <formula>Margin_Erosion_Price_Locks__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Erosion $ (Price Locks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Net_IGM_Customer_Margin_Perc__c</fullName>
        <formula>IF(CPM_Total_Contract_Sales_Net__c &gt;0, CPM_Net_IGM_Customer_Margin__c
/CPM_Total_Contract_Sales_Net__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net IGM/Customer Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPM_Net_IGM_Customer_Margin__c</fullName>
        <formula>Net_IGM_Customer_Margin__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net IGM/Customer Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Net_Inflow_Total_Contract__c</fullName>
        <label>Net Inflow (Total Contract)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Net_Present_Value_Total_Contract__c</fullName>
        <label>Net Present Value (Total Contract)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Outside_Services__c</fullName>
        <formula>Outside_Services__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outside Services $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Perf_Rebate__c</fullName>
        <formula>Perf_Rebate__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Property__c</fullName>
        <formula>Property__c * Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Test_Result__c</fullName>
        <formula>IF(CPM_Contribution_Margin_Perc__c&lt;CPM_CM_Guardrail_Non_GPO_Perc__c
,&quot;FAIL GUARDRAIL&quot;,&quot;PASS GUARDRAIL&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_Total_Contract_Sales_Gross__c</fullName>
        <formula>Annual_Contract_Sales_Gross__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Sales (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Total_Contract_Sales_Net__c</fullName>
        <formula>Total_Contract_Sales_Net__c * Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Sales (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_Variable_Selling_Payroll__c</fullName>
        <formula>Variable_Selling_Payroll__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variable Selling Payroll $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_WH_Supplies__c</fullName>
        <formula>WH_Supplies__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WH Supplies  $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPM_WH_Variable_Labor__c</fullName>
        <formula>WH_Variable_Labor__c* Agreement_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WH Variable Labor $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Trigger__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>Call Trigger</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ_Approval_AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field will populate when Quote is fully Approved</description>
        <label>Approval Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Approved PROS Quotes</relationshipLabel>
        <relationshipName>Approved_PROS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Quotes</relationshipLabel>
        <relationshipName>PROSQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingCity__c</fullName>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingCountry__c</fullName>
        <label>Bill To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingName__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingPostalCode__c</fullName>
        <label>Bill To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingState__c</fullName>
        <label>Bill To State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingStreet__c</fullName>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ExternalQuoteId__c</fullName>
        <label>External Quote</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__LocaleSidKey__c</fullName>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sq</fullName>
                </value>
                <value>
                    <fullName>sq_AL</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>ar_DZ</fullName>
                </value>
                <value>
                    <fullName>ar_BH</fullName>
                </value>
                <value>
                    <fullName>ar_EG</fullName>
                </value>
                <value>
                    <fullName>ar_IQ</fullName>
                </value>
                <value>
                    <fullName>ar_JO</fullName>
                </value>
                <value>
                    <fullName>ar_KW</fullName>
                </value>
                <value>
                    <fullName>ar_LB</fullName>
                </value>
                <value>
                    <fullName>ar_LY</fullName>
                </value>
                <value>
                    <fullName>ar_MA</fullName>
                </value>
                <value>
                    <fullName>ar_OM</fullName>
                </value>
                <value>
                    <fullName>ar_QA</fullName>
                </value>
                <value>
                    <fullName>ar_SA</fullName>
                </value>
                <value>
                    <fullName>ar_SD</fullName>
                </value>
                <value>
                    <fullName>ar_SY</fullName>
                </value>
                <value>
                    <fullName>ar_TN</fullName>
                </value>
                <value>
                    <fullName>ar_AE</fullName>
                </value>
                <value>
                    <fullName>ar_YE</fullName>
                </value>
                <value>
                    <fullName>hy</fullName>
                </value>
                <value>
                    <fullName>hy_AM</fullName>
                </value>
                <value>
                    <fullName>az_AZ</fullName>
                </value>
                <value>
                    <fullName>bn</fullName>
                </value>
                <value>
                    <fullName>bn_BD</fullName>
                </value>
                <value>
                    <fullName>eu</fullName>
                </value>
                <value>
                    <fullName>eu_ES</fullName>
                </value>
                <value>
                    <fullName>be_BY</fullName>
                </value>
                <value>
                    <fullName>bs</fullName>
                </value>
                <value>
                    <fullName>bs_BA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Id</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.CameleonCPQ__AccountId__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PROS Quotes</relationshipLabel>
        <relationshipName>PROSQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__QuoteErrors__c</fullName>
        <description>Number of errors on quote</description>
        <label>Quote Errors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__QuoteModelId__c</fullName>
        <description>The CPQx Quote Model Identifier.</description>
        <label>Quote Model Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingCity__c</fullName>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingCountry__c</fullName>
        <label>Ship To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingName__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingPostalCode__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingState__c</fullName>
        <label>Ship To State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingStreet__c</fullName>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToCity__c</fullName>
        <label>Sold To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToCountry__c</fullName>
        <label>Sold To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToName__c</fullName>
        <label>Sold To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToPostalCode__c</fullName>
        <label>Sold To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToState__c</fullName>
        <label>Sold To State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToStreet__c</fullName>
        <label>Sold To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Status__c</fullName>
        <description>Quote Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review Internally</fullName>
                </value>
                <value>
                    <fullName>Approved Internally</fullName>
                </value>
                <value>
                    <fullName>Presented to Customer</fullName>
                </value>
                <value>
                    <fullName>Accepted by Customer</fullName>
                </value>
                <value>
                    <fullName>In Review Internally (Post-Customer)</fullName>
                </value>
                <value>
                    <fullName>Fully Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected Internally</fullName>
                </value>
                <value>
                    <fullName>Rejected by Customer</fullName>
                </value>
                <value>
                    <fullName>Awaiting Account ID</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SyncExportId__c</fullName>
        <label>Synchro: CPQx Spreadsheet Export Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SyncExportParts__c</fullName>
        <label>Synchro: CPQx Spreadsheet Export Parts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SyncStatus__c</fullName>
        <label>Synchronization Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IN_PROGRESS</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>COMPLETE_WARN</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>ERROR_SYNC_OPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Total__c</fullName>
        <description>Total</description>
        <label>Total</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orion Quotes</relationshipLabel>
        <relationshipName>PROS_Quotes_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Rebate__c</fullName>
        <label>Cash Rebate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckBox_Agreement_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Agreement_Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Committed_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Committed_Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Cost_Basis_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Cost_Basis_Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Cost_Basis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Cost_Basis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Customer_comm_requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Customer_comm_requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Doc_required_to_participate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Doc_required_to_participate</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>